# advent2021

./: .gitignore  Cargo.toml
2021-rust/: Cargo.toml
2021-rust/src/: day01.rs  day02.rs  day03.rs  day09.rs  day12.rs  lib.rs  main.rs  types.rs
2021-rust/src/advent2021/: day01.rs  day06.rs
2021/puzzle_input/: input_day8.txt
2021/src/: main.rs
2021/src/aoc2021/: day5.rs
2022-haskell/: advent.cabal  hie.yaml  package.yaml  stack.yaml
2022-haskell/.stack-work/: stack.sqlite3
2022-haskell/day1/app/: Main.hs
2022-haskell/day2/app/: Main.hs
2022-haskell/day3/: output
2022-haskell/day4/app/: Main.hs
2022-haskell/input/: day1.txt
2022-haskell/src/day1/: Main.hs
2022-haskell/src/day2/: Main.hs
2022-haskell/src/day3/: Main.hs
2022/day3/: output
2023-rust/: Cargo.toml
2023-rust/input/: 5  test9
2023-rust/src/: clumsy_crucible.rs  day01.rs  day02.rs  day05.rs  day06.rs  day07.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs
haskell/day1/: day1.cabal  output
haskell/day2/: day2.cabal  output
haskell/day3/: day3.cabal
haskell/day4/: day4.cabal
haskell/day5/: a.out  day5.c
haskell/day5/hs/: LICENSE  day5.cabal
haskell/day5/hs/app/: Main.hs
puzzle_input/: test_day8.txt
rust/src/: main.rs  types.rs
scratch/: day8.ts
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  errors.rs  main.rs  types.rs
src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
(+40 files in other folders)
