[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
bitflags = "1.3.2"
anyhow = "1.0.56"
thiserror = "1.0.30"
logging_timer = "1.1.0"

[dev-dependencies]
test-case = "1.2.1"