[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
logging_timer = "1.1.0"
itertools = "0.10.3"
petgraph = "0.6.2"
indexmap = "^1.7"
tokio = "1.21.2"
hmac-sha256 = "1.1.5"
nonempty = "0.8.1"

[dev-dependencies]
test-case = "2.2.1"