cabal-version:      3.0
name:               day5
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Joshua Biggs
maintainer:         jbiggs4284@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day5
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, split ^>=0.2.3.5 
    hs-source-dirs:   app
    default-language: GHC2021
